--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "test": "npm run test:prod",
     "test:watch": "wtr --watch",
     "test:prod": "MODE=prod wtr",
+    "storybook": "npm run build && storybook dev -p 6006",
+    "build-storybook": "npm run build && storybook build",
     "test:prod:watch": "MODE=prod wtr --watch",
     "roll": "rollup -c ; ",
     "link": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm link', { stdio: 'inherit' }));\"",
     "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\"",
-    "storybook": "cd storybook-demo && npm run dev",
-    "storybook:build": "npm run build && cd storybook-demo && npm run build-storybook"
+    "storybook:legacy": "cd storybook-demo && npm run dev",
+    "storybook:build:legacy": "npm run build && cd storybook-demo && npm run build-storybook"
   },
   "keywords": [
     "web-components",
@@ -79,6 +81,10 @@
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-url": "^8.0.2",
     "@rollup/plugin-virtual": "^3.0.2",
+    "@storybook/addon-essentials": "^8.6.14",
+    "@storybook/addon-interactions": "^8.6.14",
+    "@storybook/addon-links": "^8.6.14",
+    "@storybook/web-components-vite": "^8.6.14",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@web/dev-server": "^0.1.31",
@@ -95,7 +101,9 @@
     "rollup": "^2.79.1",
     "rollup-plugin-summary": "^1.4.3",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "~4.7.4"
+    "storybook": "^8.6.14",
+    "typescript": "~4.7.4",
+    "vite": "^5.4.20"
   },
   "customElements": "custom-elements.json"
 }
