--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@storybook/addon-essentials": "^8.6.14",
     "@storybook/addon-interactions": "^8.6.14",
     "@storybook/addon-links": "^8.6.14",
+    "@storybook/addon-styling": "^1.3.7",
     "@storybook/web-components-vite": "^8.6.14",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
