--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.6",
   "description": "A comprehensive collection of enterprise-class web components built with Lit and TypeScript",
   "type": "module",
+  "workspaces": [
+    "packages/*"
+  ],
   "homepage": "https://github.com/NuralyUI/NuralyUI",
   "repository": {
     "type": "git",
@@ -14,8 +17,10 @@
   },
   "scripts": {
     "start": "concurrently 'npm:build:watch' 'npm:serve'",
-    "build": "tsc",
+    "build": "tsc && npm run themes:build",
     "build:watch": "tsc --watch",
+    "themes:build": "npm run build --workspace=@nuraly/themes",
+    "themes:dev": "npm run dev --workspace=@nuraly/themes",
     "clean": "rimraf my-element.{d.ts,d.ts.map,js,js.map} test/my-element.{d.ts,d.ts.map,js,js.map} test/my-element_test.{d.ts,d.ts.map,js,js.map}",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.ts'",
