--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@nuraly/themes",
-  "version": "1.0.0",
+  "name": "@nuralyui/themes",
+  "version": "0.1.1",
   "description": "Theme collection for Nuraly Hybrid UI Library",
   "main": "dist/index.js",
   "type": "module",
