fix(package): correct workspace references for themes in build scripts

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "start": "concurrently 'npm:build:watch' 'npm:serve'",
     "build": "tsc && npm run themes:build",
     "build:watch": "tsc --watch",
-    "themes:build": "npm run build --workspace=@nuraly/themes",
-    "themes:dev": "npm run dev --workspace=@nuraly/themes",
+    "themes:build": "npm run build --workspace=@nuralyui/themes",
+    "themes:dev": "npm run dev --workspace=@nuralyui/themes",
     "clean": "rimraf my-element.{d.ts,d.ts.map,js,js.map} test/my-element.{d.ts,d.ts.map,js,js.map} test/my-element_test.{d.ts,d.ts.map,js,js.map}",
     "lint": "npm run lint:lit-analyzer && npm run lint:eslint",
     "lint:eslint": "eslint 'src/**/*.ts'",
