--- a/src/components/dropdown/package.json
+++ b/src/components/dropdown/package.json
@@ -1,12 +1,9 @@
 {
     "name": "@nuralyui/dropdown",
-    "version": "0.0.10",
-    "description": "",
+    "version": "0.0.15",
+    "description": "Dropdown component for NuralyUI",
     "main": "index.js",
     "type": "module",
-    "dependencies": {
-        "dayjs": "^1.11.7"
-    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
