--- a/src/components/menu/package.json
+++ b/src/components/menu/package.json
@@ -1,17 +1,9 @@
 {
     "name": "@nuralyui/menu",
-    "version": "0.0.10",
-    "description": "",
+    "version": "0.0.13",
+    "description": "Menu component for NuralyUI library with support for nested submenus",
     "main": "index.js",
     "type": "module",
-    "dependencies": {
-        "dayjs": "^1.11.7"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Labidi Aymen",
-    "license": "ISC",
     "exports": {
         ".": {
             "import": "./index.js"
@@ -21,9 +13,38 @@
         }
     },
     "files": [
-        "bundle.js",
         "*.js",
         "*.d.ts",
-        "*.js.map"
-    ]
+        "*.js.map",
+        "bundle.js"
+    ],
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NuralyUI/NuralyUI.git",
+        "directory": "src/components/menu"
+    },
+    "keywords": [
+        "web-components",
+        "lit-element",
+        "menu",
+        "navigation",
+        "submenu",
+        "ui-components",
+        "typescript"
+    ],
+    "author": "Labidi Aymen",
+    "license": "ISC",
+    "nuralyui": {
+        "requiredComponents": [
+            "nr-icon",
+            "nr-dropdown"
+        ]
+    },
+    "peerDependencies": {
+        "@nuralyui/icon": "^0.0.1",
+        "@nuralyui/dropdown": "^0.0.1"
+    }
 }
