feat(toast): update toast component with new features and improvements
- Bump version to 0.0.4 and update package description in package.json
- Refactor React integration to use NrToast and update event names
- Enhance toast.component.ts with improved functionality, including support for multiple toast types, animations, and custom configurations
- Add toast.stories.ts for Storybook integration showcasing various toast types and configurations
- Revamp toast styles in toast.style.ts for better theming and responsiveness
- Introduce toast.types.ts to define enums and interfaces for toast configurations and events

--- a/src/components/toast/package.json
+++ b/src/components/toast/package.json
@@ -1,17 +1,9 @@
 {
     "name": "@nuralyui/toast",
-    "version": "0.0.3",
-    "description": "",
+    "version": "0.0.4",
+    "description": "Toast notification component for NuralyUI library",
     "main": "index.js",
     "type": "module",
-    "dependencies": {
-        "dayjs": "^1.11.7"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Labidi Aymen",
-    "license": "ISC",
     "exports": {
         ".": {
             "import": "./index.js"
@@ -21,9 +13,36 @@
         }
     },
     "files": [
-        "bundle.js",
         "*.js",
         "*.d.ts",
-        "*.js.map"
-    ]
+        "*.js.map",
+        "toast.bundled.js",
+        "bundle.js"
+    ],
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/NuralyUI/NuralyUI.git",
+        "directory": "src/components/toast"
+    },
+    "keywords": [
+        "web-components",
+        "lit-element",
+        "toast",
+        "notification",
+        "ui-components",
+        "typescript"
+    ],
+    "author": "Labidi Aymen",
+    "license": "ISC",
+    "nuralyui": {
+        "requiredComponents": [
+            "nr-icon"
+        ]
+    },
+    "peerDependencies": {
+        "@nuralyui/icon": "^0.0.1"
+    }
 }
