feat(chatbot): remove locale picker component and update chatbot structure
- Deleted the locale-picker component to streamline the chatbot functionality.
- Updated index.ts to include new types, interfaces, and controllers.
- Added chatbot-host.interface.ts for better structure and validation capabilities.
- Introduced new CSS themes for the chatbot component, including light and dark variants based on the Carbon Design System.
- Enhanced the default theme with common variables and improved styling for various elements.
- Updated package.json to reflect version change and added keywords for better discoverability.
- Created a React wrapper for the chatbot component to facilitate integration with React applications.

--- a/src/components/chatbot/package.json
+++ b/src/components/chatbot/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@nuralyui/chatbot",
-    "version": "0.0.5",
-    "description": "",
+    "version": "0.0.6",
+    "description": "Versatile chatbot component with message handling, suggestions, and typing indicators",
     "main": "index.js",
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Labidi Aymen",
-    "license": "ISC",
+    "license": "MIT",
     "dependencies": {
         "dayjs": "^1.11.13"
     },
@@ -18,12 +18,24 @@
         },
         "./bundle": {
             "import": "./bundle.js"
+        },
+        "./react": {
+            "import": "./react.js"
         }
     },
     "files": [
         "bundle.js",
+        "react.js",
         "*.js",
         "*.d.ts",
         "*.js.map"
+    ],
+    "keywords": [
+        "chatbot",
+        "chat",
+        "ui",
+        "web-components",
+        "lit-element",
+        "nuralyui"
     ]
 }
