--- a/src/components/menu/package.json
+++ b/src/components/menu/package.json
@@ -23,7 +23,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/NuralyUI/NuralyUI.git",
+        "url": "https://github.com/Nuralyio/NuralyUI.git",
         "directory": "src/components/menu"
     },
     "keywords": [
