--- a/src/components/popconfirm/package.json
+++ b/src/components/popconfirm/package.json
@@ -26,6 +26,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/NuralyUI/NuralyUI.git"
+    "url": "https://github.com/Nuralyio/NuralyUI.git"
   }
 }
