--- a/src/components/tag/package.json
+++ b/src/components/tag/package.json
@@ -17,12 +17,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/NuralyUI/NuralyUI.git",
+    "url": "https://github.com/Nuralyio/NuralyUI.git",
     "directory": "src/components/tag"
   },
   "keywords": ["tag", "label", "chip", "web-components", "lit", "nuralyui"],
   "author": "Nuraly",
   "license": "MIT",
-  "bugs": { "url": "https://github.com/NuralyUI/NuralyUI/issues" },
-  "homepage": "https://github.com/NuralyUI/NuralyUI#readme"
+  "bugs": { "url": "https://github.com/Nuralyio/NuralyUI/issues" },
+  "homepage": "https://github.com/Nuralyio/NuralyUI#readme"
 }
