--- a/src/components/timeline/package.json
+++ b/src/components/timeline/package.json
@@ -24,7 +24,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/NuralyUI/NuralyUI.git",
+        "url": "https://github.com/Nuralyio/NuralyUI.git",
         "directory": "src/components/timeline"
     },
     "keywords": [
@@ -41,7 +41,7 @@
     "author": "Nuraly, Laabidi Aymen",
     "license": "MIT",
     "bugs": {
-        "url": "https://github.com/NuralyUI/NuralyUI/issues"
+        "url": "https://github.com/Nuralyio/NuralyUI/issues"
     },
-    "homepage": "https://github.com/NuralyUI/NuralyUI#readme"
+    "homepage": "https://github.com/Nuralyio/NuralyUI#readme"
 }
