--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "workspaces": [
     "packages/*"
   ],
-  "homepage": "https://github.com/NuralyUI/NuralyUI",
+  "homepage": "https://github.com/Nuralyio/NuralyUI",
   "repository": {
     "type": "git",
-    "url": "https://github.com/NuralyUI/NuralyUI.git"
+    "url": "https://github.com/Nuralyio/NuralyUI.git"
   },
   "bugs": {
-    "url": "https://github.com/NuralyUI/NuralyUI/issues"
+    "url": "https://github.com/Nuralyio/NuralyUI/issues"
   },
   "scripts": {
     "start": "concurrently 'npm:build:watch' 'npm:serve'",
