--- a/packages/themes/package.json
+++ b/packages/themes/package.json
@@ -41,6 +41,15 @@
   ],
   "author": "Nuraly",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Nuralyio/NuralyUI.git",
+    "directory": "packages/themes"
+  },
+  "bugs": {
+    "url": "https://github.com/Nuralyio/NuralyUI/issues"
+  },
+  "homepage": "https://github.com/Nuralyio/NuralyUI#readme",
   "devDependencies": {
     "fs-extra": "^11.1.1",
     "chokidar": "^3.5.3"
