--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nuralyui/workspace",
   "private": true,
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "A comprehensive collection of enterprise-class web components built with Lit and TypeScript",
   "type": "module",
   "workspaces": [
@@ -111,6 +111,8 @@
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-gzip": "^4.1.1",
+    "rollup-plugin-minify-html-literals": "^1.2.6",
     "rollup-plugin-summary": "^1.4.3",
     "rollup-plugin-terser": "^7.0.2",
     "storybook": "^8.6.14",
