feat(icon): migrate from FontAwesome to Lucide icons; update styles and documentation feat(menu): add arrow positioning for submenu icons; enhance styles for better spacing fix(divider): adjust styles for vertical dividers to stretch and improve visibility chore(dependencies): update package.json and package-lock.json to include lucide

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ my-element.bundled.js
 packages/common/src/**/*.d*.*
 packages/common/src/**/*.js
 packages/common/src/**/*.js.*
+storybook-static/
