--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "@types/react": "^18.0.28",
     "dayjs": "^2.0.0-alpha.4",
     "lit": "^2.2.4",
+    "lucide": "^0.552.0",
     "react": "^18.2.0",
     "vanilla-colorful": "^0.7.2"
   },
