--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -13,7 +13,8 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "experimentalDecorators": true
   },
   "include": [
     "src/**/*.ts"
