--- a/src/components/panel/package.json
+++ b/src/components/panel/package.json
@@ -1,13 +1,31 @@
 {
   "name": "@nuralyui/panel",
-  "version": "1.0.0",
+  "version": "0.0.3",
   "description": "Panel component for NuralyUI - transformable panel/window with drag and resize",
   "main": "index.js",
-  "module": "index.js",
-  "types": "index.d.ts",
   "type": "module",
+  "exports": {
+    ".": {
+      "import": "./index.js"
+    },
+    "./bundle": {
+      "import": "./bundle.js"
+    }
+  },
+  "files": [
+    "*.js",
+    "*.d.ts",
+    "*.js.map",
+    "panel.bundled.js",
+    "bundle.js"
+  ],
   "scripts": {
-    "build": "node scripts/build.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Nuralyio/NuralyUI.git",
+    "directory": "src/components/panel"
   },
   "keywords": [
     "panel",
@@ -18,12 +36,14 @@
     "lit"
   ],
   "author": "Nuraly, Laabidi Aymen",
-  "license": "MIT",
-  "dependencies": {
-    "lit": "^3.0.0",
-    "@nuralyui/common": "workspace:*"
+  "license": "ISC",
+  "nuralyui": {
+    "requiredComponents": [
+      "nr-icon"
+    ]
   },
   "peerDependencies": {
-    "@nuralyui/icon": "workspace:*"
+    "@nuralyui/icon": "^0.0.1",
+    "@nuralyui/common": "^0.0.1"
   }
 }
