--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "concurrently 'npm:build:watch' 'npm:serve'",
-    "build": "npm run common:compile && tsc && npm run packages:build",
+    "build": "npm run common:compile && tsc && npm run roll && npm run packages:build",
     "build:watch": "tsc --watch",
     "packages:build": "npm run common:build && npm run themes:build && npm run forms:build && npm run layout:build",
     "themes:build": "npm run build --workspace=@nuralyui/themes",
@@ -45,8 +45,8 @@
     "build-storybook": "npm run build && storybook build",
     "test:prod:watch": "MODE=prod wtr --watch",
     "roll": "rollup -c ; ",
-    "link": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm link', { stdio: 'inherit' }));\"",
-    "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\""
+    "link": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/src/components/' + dir + ' && npm link', { stdio: 'inherit' }));\"",
+    "unlink": "node -e \"const { execSync } = require('child_process'); ['button', 'file-upload', 'colorpicker', 'datepicker', 'dropdown', 'icon', 'input', 'menu', 'modal', 'radio', 'select', 'slider-input', 'tabs', 'tooltips', 'checkbox', 'table', 'collapse'].forEach(dir => execSync('cd dist/src/components/' + dir + ' && npm unlink @nuralyui/' + dir, { stdio: 'inherit' }));\""
   },
   "keywords": [
     "web-components",
@@ -98,6 +98,7 @@
     "@storybook/addon-links": "^8.6.14",
     "@storybook/addon-styling": "^1.3.7",
     "@storybook/web-components-vite": "^8.6.14",
+    "@types/jest": "^30.0.0",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "@web/dev-server": "^0.1.31",
