--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "@web/test-runner-playwright": "^0.9.0",
     "@webcomponents/webcomponentsjs": "^2.6.0",
     "concurrently": "^7.6.0",
+    "entities": "^7.0.0",
     "eslint": "^8.15.0",
     "lit-analyzer": "^1.2.1",
     "prettier": "^2.6.2",
