feat: add nanostores and persistent support in data node configuration
- Updated package.json and package-lock.json to include @nanostores/persistent and nanostores.
- Introduced global type declarations for nanostores and persistent in global.d.ts.
- Implemented NrDataNodeConfig component for managing data node configurations, including database type, connection, schema, and table selection.
- Created NrSchemaSelect and NrTableSelect components for schema and table selection respectively.
- Refactored config-panel.template.ts to utilize the new NrDataNodeConfig component for data node configuration.
- Enhanced localization service to cache localization configuration globally.
- Fixed type issues in event.controller.ts for better type safety.
- Updated tsconfig.json to refine include and exclude patterns for TypeScript compilation.

--- a/package.json
+++ b/package.json
@@ -75,10 +75,12 @@
     "@lit-labs/virtualizer": "^2.0.9",
     "@lit/localize": "^0.12.2",
     "@lit/reactive-element": "^2.1.1",
+    "@nanostores/persistent": "^1.2.0",
     "@types/react": "^18.0.28",
     "dayjs": "^2.0.0-alpha.4",
     "lit": "^3.0.0",
     "lucide": "^0.552.0",
+    "nanostores": "^0.11.4",
     "react": "^18.2.0",
     "vanilla-colorful": "^0.7.2"
   },
